<?xml version="1.0"?>
<package format="2">
  <name>mh5_hardware_control</name>
  <version>0.1.0</version>
  <description>Hadware interface collection based on Dynamixel protocol for MH5</description>
  <maintainer email="alex.sonea@gmail.com">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>mh5_dynamixel_interface</build_depend>
  <depend>combined_robot_hw</depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>mh5_dynamixel_interface</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>mh5_dynamixel_interface</exec_depend>

  <export>
    <hardware_interface plugin="${prefix}/mh5_hw_plugin.xml"/>
  </export>
</package>